syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.elasticsoftware.elasticactors.cloudnative";
option java_outer_classname = "ActorSystem";
option objc_class_prefix = "HLW";

package org.elasticsoftware.elasticactors.cloudnative;

// The service definition.
service PersistentActorService {
  // handle incoming message
  rpc handleMessage (HandleMessageRequest) returns (HandleMessageResponse) {}
}

// The request message with the actor name.
message HandleMessageRequest {
  InternalMessage message = 1;
  ActorState state = 2;
}

message HandleMessageResponse {
  repeated InternalMessage messages = 1;
  ActorState state = 2;
}

message InternalMessage {
  string receiver = 1;
  string sender = 2;
  string payloadType = 3;
  bytes payload = 4;
  bytes id = 5;
  bool durable = 6;
  bool undeliverable = 7;
  repeated string receivers = 8;
  uint32 timeout = 9;
}

// The current serialized actor state
message ActorState {
  bytes state = 1;
  uint64 stateGeneration = 2;
  string compressionMethod = 3;
}